# HabitBot

./: README.md  api_loader.py  bot_loader.py  pyproject.toml  requirements.txt
src/: main.py  settings.py
src/backend/: api.py  db_engine.py  models.py  pydantic_models.py  sql_core.py
src/frontend/: bot.py  filters.py  states.py  utils.py
src/frontend/handlers/: __init__.py  habit_create_states.py  habits_CRUD.py  habits_view.py  start.py
src/frontend/keyboards/: inline_keyboards.py
src/notification/: notification.py
