[tool.poetry]
name = "habitbot"
version = "0.1.0"
description = ""
authors = ["Dmitry <dmitry.python@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
aiogram = "^3.14.0"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
asyncpg = "^0.30.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
